# fwrf

./: Cargo.toml  README.md  build.rs  butts.html  make-bins.sh  matt-parker-fake.txt  run-bins.sh  run-tests.sh  testwl.txt  view.html
fwrf_lib/: Cargo.toml
fwrf_lib/src/: binary_searched_array_map.rs  bsam2.rs  charset.rs  config.rs  echar.rs  lib.rs  serial_prefix_map.rs  wordstuffs.rs
fwrf_search/: Cargo.toml  build.rs  make-bins.sh  run-bins.sh  run-tests.sh
fwrf_search/src/: main.rs  perfect_map.rs
src/: charset.rs  config.rs  echar.rs  main.rs  notes.txt  serial_prefix_map.rs  wordstuffs.rs
