[package]
name = "fwrf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
fnv = "1.0.7"
clap = "2.33.3"
crossbeam-channel = "0.5"
devtimer = "4.0"

[dependencies.deranged]
git = "https://github.com/shelvacu/deranged"
branch = "array-indexes"
#path = "../deranged"
default-features = false
features = ["std"]

# These options trade some compile time for hopefully faster code.
# Particularly lto = true and codegen-units = 1
[profile.dev]
opt-level = 3
debug = false
overflow-checks = false
lto = true
codegen-units = 1
panic = 'abort'

[features]
do-debug = []
unchecked = ["deranged/unsafe-range-assert"]
btreemap = []

charset-english-small = ["charset-size-32"]
charset-english-extended = ["charset-size-64"]

charset-size-32 = []
charset-size-64 = []
# To indicate that width is the same as height.
square = []

width-2 = []
width-3 = []
width-4 = []
width-5 = []
width-6 = []
width-7 = []
width-8 = []
width-9 = []
width-10 = []
width-11 = []
width-12 = []
width-13 = []
width-14 = []
width-15 = []
height-2 = []
height-3 = []
height-4 = []
height-5 = []
height-6 = []
height-7 = []
height-8 = []
height-9 = []
height-10 = []
height-11 = []
height-12 = []
height-13 = []
height-14 = []
height-15 = []

default = ["width-8", "height-5", "charset-english-small"]
