[workspace]
members = ["fwrf_search", "fwrf_lib"]
resolver = "2"

# Only needed for phf but can't gate on that
[profile.dev.build-override]
opt-level = 3

# These options trade some compile time for hopefully faster code.
# Particularly lto = true and codegen-units = 1
[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
codegen-units = 1
panic = 'abort'